--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,9 +17,12 @@
   <div class="row">
     <div class="col-12">
       <div class="d-flex flex-wrap justify-content-between">
-        <div *ngFor="let user of users">
-          <app-single-user [user]="user"></app-single-user>
-        </div>
+        <div *ngIf="errorCallUser; else userBlock">Erreur de chargement des données utilisateurs</div>
+        <ng-template #userBlock>
+          <div *ngFor="let user of users">
+            <app-single-user [user]="user"></app-single-user>
+          </div>
+        </ng-template>
       </div>
     </div>
   </div>
