--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,20 @@
 <div class="container-fluid">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" routerLink="/">Navbar</a>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/">Home<span class="sr-only"></span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/vinyls">Vinyls<span class="sr-only"></span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/users">Users</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
   <div class="row">
     <div class="col-12 d-flex justify-content-center">
       <h1>Welcome to {{ title }}!</h1>
@@ -6,24 +22,7 @@
   </div>
   <div class="row">
     <div class="col-12">
-      <div class="d-flex flex-wrap justify-content-between">
-        <div *ngFor="let vinyl of vinyls">
-          <app-single-vinyl [vinyl]="vinyl"></app-single-vinyl>
-        </div>
-      </div>
-    </div>
-  </div>
-  <h3>User MGT</h3>
-  <div class="row">
-    <div class="col-12">
-      <div class="d-flex flex-wrap justify-content-between">
-        <div *ngIf="errorCallUser; else userBlock">Erreur de chargement des données utilisateurs</div>
-        <ng-template #userBlock>
-          <div *ngFor="let user of users | async">
-            <app-single-user [user]="user"></app-single-user>
-          </div>
-        </ng-template>
-      </div>
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
