Third day (second half) : Form

--- a/src/app/vinyl/list-vinyl/list-vinyl.component.html
+++ b/src/app/vinyl/list-vinyl/list-vinyl.component.html
@@ -1,3 +1,4 @@
+<button class="btn btn-primary mt-2" routerLink="/vinyls/add">Ajouter un vinyl</button>
 <div class="d-flex flex-wrap justify-content-between">
   <div *ngFor="let vinyl of vinyls">
     <app-single-vinyl [vinyl]="vinyl"></app-single-vinyl>
