Fourth day (second half) : Edit user

--- a/src/app/user/list-user/list-user.component.html
+++ b/src/app/user/list-user/list-user.component.html
@@ -1,3 +1,4 @@
+<button class="btn btn-primary" routerLink="/users/add">Ajouter un utilisateur</button>
 <div class="d-flex flex-wrap justify-content-between">
   <div *ngIf="errorCallUser; else userBlock">Erreur de chargement des données utilisateurs</div>
   <ng-template #userBlock>
